@@ -44,7 +44,6 @@ demandload(globals(),
     're',
     'time',
     'math:floor',
-    'snakeoil.compatibility:any',
     'pkgcore.package.mutated:MutatedPkg',
     'pkgcore.util:file_type,thread_pool',
     'pkgcore:os_data',
